<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">iMED v6.3b</string>
    <string name="version">6.3b</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="test">TEST</string>
    <string name="label">THÔNG TIN ĐĂNG NHẬP</string>
    <string name="user">USERNAME </string>
    <string name="pass">PASSWORD </string>
    <string name="sid">Số SID</string>
    <string name="pid">THẺ PID</string>
    <string name="secu">MÃ BẢO MẬT</string>
    <string name="name">TÊN KHÁCH HÀNG</string>
    <string name="day">NGÀY</string>
    <string name="month">THÁNG</string>
    <string name="year">NĂM</string>
    <string name="YEARs">19</string>
    <string name="address">ĐỊA CHỈ</string>
    <string name="quan">QUẬN</string>
    <string name="phone">ĐIỆN THOẠI</string>
    <string name="email">EMAIL</string>
    <string name="sex">GIỚI TÍNH</string>
    <string name="SIDs">11</string>
    <string name="commend">GHI CHÚ</string>
    <string name="lydo">LD/CĐ</string>
    <string name="chamsoc">CHĂM SÓC</string>
    <string name="tuvan">ĐĂNG KÍ TƯ VẤN</string>
    <string name="dilai">ĐI LẠI</string>
    <string name="doctor">BÁC SĨ</string>
    <string name="doctorID">MÃ BÁC SĨ</string>
    <string name="chietkhau">C/KHẤU</string>
    <string name="title">THÔNG TIN KHÁCH HÀNG</string>
    <string name="matongdai">MÃ TỔNG ĐÀI</string>
    <string name="username">TÊN ĐĂNG NHẬP LABCONN</string>
    <string name="mabacsi">MÃ BÁC SĨ</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="title_activity_4">4Activity</string>
    <string name="title_activity_test_code__selected">TestCode_Selected</string>
    <string name="print">In hóa đơn</string>
    <string name="connect_blue">Kết nối máy in</string>
    <string name="title_activity_printer">PrinterActivity</string>
    <string name="button_scan">Quét máy in</string>
    <string name="title_other_devices">Máy in khác</string>
    <string name="title_paired_devices">Máy in đã kết đồng bộ</string>
    <string name="none_found">Không có thiết bị nào được tìm kiếm </string>
    <string name="none_paired">Chưa có thiết bị nào được đồng bộ</string>
    <string name="scanning">Đang quét</string>
    <string name="select_device">Chọn thiết bị kết nối</string>
    <string name="bluetooth_unconnected">Không kết nối!</string>
    <string name="bluetooth_connect_fail">Kết nối thất bại</string>
    <string name="bluetooth_connect_sucess">Kết nối thành công máy in tại địa chỉ: </string>
    <string name="title_activity_patient">Thông tin khách hàng</string>
    <string name="title_activity_hoa_sinh">HoaSinh</string>
    <string name="title_activity_front_">Nhập liệu tại nhà v5.4</string>
    <string name="title_activity_dumb_info">DumbInfo</string>
    <string name="title_activity_sync">Danh mục đồng bộ</string>
    <string name="title_activity_activity__khac">Activity_Khac</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_test_code__huyet_hoc">TestCode_HuyetHoc</string>
    <string name="title_activity_test_code___mien_dich">TestCode__MienDich</string>
    <string name="title_activity_test_code__mien_dich">TestCode_MienDich</string>
    <string name="title_activity_test_code__te_bao">TestCode_TeBao</string>
    <string name="title_activity_test_code__vi_khuan">TestCode_ViKhuan</string>
    <string name="title_activity_test_code__noi_tiet">TestCode_NoiTiet</string>
    <string name="capture_name">QR Code Capture</string>
    <string name="encoder_name">QR Code Encoder</string>
    <string name="decoder_name">QR Code Decoder</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="msg_default_contents">Contents</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="result_isbn">Found book</string>
    <string name="result_product">Found product</string>
    <string name="result_sms">Found SMS address</string>
    <string name="result_tel">Found phone number</string>
    <string name="result_text">Found plain text</string>
    <string name="result_uri">Found URL</string>
    <string name="result_wifi">Found WLAN Configuration</string>
    <string name="wifi_changing_network">Changing Network</string>
    <string name="wifi_ssid_label">Network Name</string>
    <string name="wifi_type_label">Type</string>
    <string name="barcode_image">Barcode Image</string>
    <string name="title_activity_cay">Cấy - Sinh thiết</string>
    <string name="title_activity_search">Tìm kiếm dịch vụ</string>
    <string name="title_activity_lansoanh">Lansoanh</string>

    <style name="ButtonText">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">16sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
        <item name="android:paddingLeft">15dp</item>
        <item name="android:paddingRight">15dp</item>
    </style>

    <string name="title_activity_main_tweet">MainTweet</string>
    <string name="title_activity_doctor_printer">DoctorPrinter</string>
    <string name="title_activity_receipt">Receipt</string>
    <string name="title_activity_receipt_tk">ReceiptTK</string>
    <string name="title_activity_get_gps">GetGPS</string>
    <string name="title_activity_goi_kham">GoiKham</string>

    <string-array name="reason">
        <item>Chưa trả kết quả</item>
        <item>Đã trả kết quả</item>
        <item>Gửi người thân</item>
        <item>Nhét cửa</item>
        <item>Lý do khác</item>
    </string-array>

    <!--
    <string-array name="nhanmau">
        <item>Edta</item>
        <item>Citrat</item>
        <item>Nước tiểu</item>
    </string-array>
    -->


    <!--
    <string-array name="soluong">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    -->

    <string name="title_activity_getsple">Bàn giao mẫu</string>
    <string name="title_activity_hotro">Hotro</string>

</resources>
